--- a/package.json
+++ b/package.json
@@ -2,10 +2,27 @@
   "name": "postgres_rest_prisma",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "main": "app.js",
+  "author": "Gaurav Rai",
+  "license": "ISC",
+  "dependencies": {
+    "@apollo/server": "^4.2.2",
+    "@prisma/client": "4.7.1",
+    "apollo-server": "3.11.1",
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^8.5.1"
   },
-  "author": "",
-  "license": "ISC"
+  "devDependencies": {
+    "@types/express": "^4.17.14",
+    "@types/node": "18.11.10",
+    "prisma": "4.7.1",
+    "ts-node": "10.9.1",
+    "ts-node-dev": "2.0.0",
+    "typescript": "4.9.3"
+  },
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
+  }
 }
