--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@apollo/server": "^4.2.2",
     "@prisma/client": "4.7.1",
     "apollo-server": "3.11.1",
+    "bcrypt": "^5.1.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "express": "^4.18.2",
