--- a/package.json
+++ b/package.json
@@ -5,6 +5,11 @@
   "main": "app.js",
   "author": "Gaurav Rai",
   "license": "ISC",
+  "scripts": {
+    "compile": "tsc",
+    "start": "npm run compile && node ./dist/app.js",
+    "dev": "npx prisma migrate dev --name init && ts-node-dev --no-notify --respawn --transpile-only src/app"
+  },
   "dependencies": {
     "@apollo/server": "^4.2.2",
     "@prisma/client": "4.7.1",
@@ -13,6 +18,8 @@
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "express-rate-limit": "^6.7.0",
+    "http-status-codes": "^2.2.0",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0"
   },
